# aard

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/aard/: CMakeLists.txt
apps/aard/src/: aard.cpp  aard.h  main.cpp
apps/aard/src/sdl/: context.h  graphics_context.h  video.h
cmake/: Dependencies.cmake
